[gd_scene load_steps=9 format=3 uid="uid://bgnpd0s4m677r"]

[ext_resource type="Script" path="res://Scripts/archer_enemy.gd" id="1_vfvhe"]
[ext_resource type="Texture2D" uid="uid://dawngp2ubqlvm" path="res://Sprites/archerEnemy.png" id="2_5vyd2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c08yi"]
atlas = ExtResource("2_5vyd2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0a7e"]
atlas = ExtResource("2_5vyd2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n51ox"]
atlas = ExtResource("2_5vyd2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_neqk6"]
atlas = ExtResource("2_5vyd2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ujvwa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c08yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0a7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n51ox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0a7e")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_neqk6")
}],
"loop": true,
"name": &"Shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmoo6"]
size = Vector2(12, 15)

[node name="ArcherEnemy" type="CharacterBody2D"]
process_mode = 1
collision_layer = 4
collision_mask = 5
script = ExtResource("1_vfvhe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ujvwa")
animation = &"Shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gmoo6")

[node name="RayCast1" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(7, 0)
collision_mask = 5

[node name="RayCast2" type="RayCast2D" parent="."]
position = Vector2(0, 4)
target_position = Vector2(-7, 0)
collision_mask = 5

[node name="Sight" type="RayCast2D" parent="."]
target_position = Vector2(120, 0)
collision_mask = 2

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ShootDelay" type="Timer" parent="."]
wait_time = 0.7

[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="timeout" from="ShootDelay" to="." method="_on_shoot_delay_timeout"]
